@@ -11,7 +11,8 @@ STATUS
 
 Hard to tell.  I believe that the iptables and ipchains drivers
 support all the features of the parser and seem to generate sane-
-looking rules.
+looking rules.  The ipfilter backend seems to generate OK-looking
+rules, but I don't even have a BSD box to test it on.
 
 The Cisco ACL generator will silently drop negations, which makes
 is essentially useless for a lot of things.  This will be fixed,
@@ -26,4 +27,4 @@ firewalls, though I intend to change that once I've added logging
 and transparent proxying support.
 
 
-$Id: HONESTY,v 1.1 2001/10/03 20:39:42 matthew Exp $
+$Id: HONESTY,v 1.2 2001/10/04 14:02:43 matthew Exp $
