@@ -1,3 +1,9 @@
+Recent:
+	add ipfilter backend
+	fix yet another silly bug in main()
+	add warning notice to cisco driver
+	cisco driver supports port ranges now
+
 0.2: Various improvements
 	rewrote iptables driver
 	added ipchains driver
@@ -9,4 +15,4 @@
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.2 2001/10/03 20:43:43 matthew Exp $
+$Id: HISTORY,v 1.3 2001/10/04 14:02:43 matthew Exp $
